# syclnn

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
include/: network.hpp
python/syclnn/: __init__.py
src/: python_bindings.cpp
